#
# Copyright (c) 2021, gottingen group.
# All rights reserved.
# Created by liyinbin lijippy@163.com
#

package(default_visibility = ["//visibility:public"])

licenses(["notice"])


load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load(
    "//:copts/configure_copts.bzl",
    "CARBIN_DEFAULT_COPTS",
    "CARBIN_DEFAULT_LINKOPTS",
)

ABEL_HDRS = glob([
                    "algorithm/*.h",
                    "atomic/*.h",
                    "base/internal/*.h",
                    "base/*.h",
                    "chrono/*.h",
                    "chrono/internal/*.h",
                    "chrono/internal/*.inc",
                    "config/*.h",
                    "config/internal/*.h",
                    "container/*.h",
                    "container/internal/*.h",
                    "debugging/*.h",
                    "debugging/*.inc",
                    "debugging/internal/*.h",
                    "debugging/internal/*.inc",
                    "digest/*.h",
                    "functional/*.h",
                    "functional/**/*.h",
                    "hardware/*.h",
                    "hash/*.h",
                    "hash/**/*.h",
                    "io/*.h",
                    "log/*.h",
                    "log/**/*.h",
                    "math/*.h",
                    "memory/*.h",
                    "memory/**/*.h",
                    "meta/*.h",
                    "meta/**/*.h",
                    "metrics/*.h",
                    "numeric/*.h",
                    "random/*.h",
                    "random/**/*.h",
                    "random/**/*.inc",
                    "status/*.h",
                    "strings/*.h",
                    "strings/**/*.h",
                    "system/*.h",
                    "thread/*.h",
                    "thread/**/*.h",
                    "thread/**/*.inc",
                    "trie/*.h",
                    "trie/**/*.h",
                    "utility/*.h",
                    "utility/**/*.h",
                ])

ABEL_SRCS = glob([
                    "base/*.cc",
                    "chrono/*.cc",
                    "chrono/internal/*.cc",
                    "config/*.cc",
                    "config/internal/*.cc",
                    "container/*.cc",
                    "container/internal/*.cc",
                    "debugging/*.cc",
                    "debugging/internal/*.cc",
                    "digest/*.cc",
                    "hardware/*.cc",
                    "hash/*.cc",
                    "hash/internal/*.cc",
                    "io/*.cc",
                    "memory/*.cc",
                    "memory/**/*.cc",
                    "metrics/*.cc",
                    "numeric/*.cc",
                    "random/*.cc",
                    "random/**/*.cc",
                    "status/*.cc",
                    "strings/*.cc",
                    "strings/**/*.cc",
                    "system/*.cc",
                    "thread/*.cc",
                    "thread/**/*.cc",
                    "utility/*.cc",
                    "utility/**/*.cc",
                ])
cc_library(
    name = "abel",
    srcs = ABEL_SRCS,
    hdrs = ABEL_HDRS,
    copts = CARBIN_DEFAULT_COPTS + ["-std=c++17", "-O2"],
    visibility = ["//visibility:public",],
)

cc_library(
    name = "abel-debug",
    srcs = ABEL_SRCS,
    hdrs = ABEL_HDRS,
    copts = CARBIN_DEFAULT_COPTS + ["-std=c++17", "-g -O0"],
    visibility = ["//visibility:public",],
)
